inserito le immagini e icona e nome sotto l'immagine

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/d61896bf44.js" crossorigin="anonymous"></script>            
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 <body>
@@ -15,7 +16,12 @@
 
         <div class="view">
 
-            <span></span>
+            <div class="speaker-view">
+                <i class="material-icons">view_module</i>
+                <div class="speaker">Speaker View</div>
+            </div>
+
+            <div class="enlarge"><i class="fa fa-arrows-alt"></i></div>
 
         </div>
 
@@ -23,7 +29,168 @@
 
             <div class="users">
 
+                <img src="./img/user.jpg" alt="user">
+                <div class="name">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Pinco Pallo
+                </div>
+
             </div>
+
+            <div class="users">
+
+                <img src="./img/user.jpg" alt="user">
+                <div class="name">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Pinco Pallo
+                </div>
+
+            </div>
+
+            <div class="users">
+
+                <img src="./img/user.jpg" alt="user">
+                <div class="name">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Pinco Pallo
+                </div>
+
+            </div>
+
+            <div class="users">
+
+                <img src="./img/user.jpg" alt="user">
+                <div class="name">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Pinco Pallo
+                </div>
+
+            </div>
+
+            <div class="users">
+
+                <img src="./img/user.jpg" alt="user">
+                <div class="name">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Pinco Pallo
+                </div>
+
+            </div>
+
+            <div class="users">
+
+                <img src="./img/user.jpg" alt="user">
+                <div class="name">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Pinco Pallo
+                </div>
+
+            </div>
+
+            <div class="users">
+
+                <img src="./img/user.jpg" alt="user">
+                <div class="name">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Pinco Pallo
+                </div>
+
+            </div>
+
+            <!-- Fine prima riga -->
+
+            <div class="users">
+
+                <img src="./img/user.jpg" alt="user">
+                <div class="name">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Pinco Pallo
+                </div>
+
+            </div>
+
+            <div class="users">
+
+                <img src="./img/user.jpg" alt="user">
+                <div class="name">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Pinco Pallo
+                </div>
+
+            </div>
+
+            <div class="users">
+
+                <img src="./img/user.jpg" alt="user">
+                <div class="name">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Pinco Pallo
+                </div>
+
+            </div>
+
+            <div class="users">
+
+                <img src="./img/user.jpg" alt="user">
+                <div class="name">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Pinco Pallo
+                </div>
+
+            </div>
+
+            <div class="users">
+
+                <img src="./img/user.jpg" alt="user">
+                <div class="name">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Pinco Pallo
+                </div>
+
+            </div>
+
+            <div class="users">
+
+                <img src="./img/user.jpg" alt="user">
+                <div class="name">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Pinco Pallo
+                </div>
+
+            </div>
+
+            <div class="users">
+
+                <img src="./img/user.jpg" alt="user">
+                <div class="name">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Pinco Pallo
+                </div>
+
+            </div>
+
+            <!-- Fine seconda riga -->
+
+            <div class="users">
+
+                <img src="./img/user.jpg" alt="user">
+                <div class="name">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Pinco Pallo
+                </div>
+
+            </div>
+
+            <div class="users">
+
+                <img src="./img/user.jpg" alt="user">
+                <div class="name">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Pinco Pallo
+                </div>
+
+            </div>
+
 
 
         </div>
