completata navbar superiore

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="view">
 
         <div class="speaker-view">
-            <i class="material-icons">view_module</i>
+            <i class='fas fa-th'></i>
             <div class="speaker">Speaker View</div>
         </div>
 
@@ -398,6 +398,7 @@
         <div class="options">
 
             <i class='fas fa-microphone'></i>
+            <div class="mute">Mute</div>
             
       
 
