--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <nav class="view">
 
         <div class="speaker-view">
+            
             <i class='fas fa-th'></i>
             <div class="speaker">Speaker View</div>
         </div>
@@ -395,6 +396,8 @@
 
     <nav class="toolbar">
 
+        <!-- prima sezione navbar inferiore -->
+
         <div class="options">
 
             <div class="icons">
@@ -426,6 +429,8 @@
       
 
         </div>
+
+        <!-- seconda sezione navbar inferiore -->
 
         <div class="manage">
 
@@ -493,6 +498,8 @@
 
 
         </div>
+
+        <!-- terza sezione navbar inferiore -->
 
         <div class="close">
 
